<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#54F1E2E2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_nagation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ImageButton
            android:id="@+id/image_btn_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_btn_add"
            android:visibility="invisible" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_action_shop" />

                <TextView
                    android:id="@+id/text_Name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="Smart Shop"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/text_Domain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="agamilabs.smartshop.com"
                    android:textAllCaps="false"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:text="(logout)"
                    android:id="@+id/logout"
                    android:textColor="@color/accent"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="start|center"
                android:text="Smart POS"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="15dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_dashboard"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/dashboard"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_new_sale"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/new_sale"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_sale_invoices"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/sale_invoices"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_stock_report"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/stock_report"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="start|center"
                android:text="Smart e-Commerce"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="15dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_dashboard_ecommerce"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/dashboard"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_order_reports"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/online_orders"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_inbox"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/shop_inbox"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"

                android:gravity="start|center"
                android:text="Smart Promotion"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="15dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_campaign"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/campaign"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_recharge"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:text="@string/recharge"
                    android:background="@drawable/ripple_effect"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>